<resources>
    <string name="app_name">Formula 1 Factory</string>
    <string name="market_button">Market</string>
    <string name="manufacture_button">Manufacture</string>
    <string name="factory_orders">Factory orders</string>
    <string name="component_list">Component list</string>
    <string name="routes">Routes</string>
    <string name="workstations_list">Workstations list</string>
    <string name="market_orders">Market orders</string>
    <string name="add_order">Add order</string>
    <string name="order_component">Order component</string>
    <string name="add_route">Add route</string>
    <string name="add_workstation">Add workstation</string>
    <string name="delete_order">Delete order</string>
    <string name="delete_component">Delete component</string>
    <string name="delete_route">Delete route</string>
    <string name="delete_workstation">Delete workstation</string>
    <string name="order_id_textview">Order ID</string>
    <string name="product_name_textview">Product Name(s)</string>
    <string name="product_name_quantity_textview">Product Name(s) and Quantity</string>
    <string name="order_date_textview">Order Date</string>
    <string name="client_name_textview">Client Name</string>
    <string name="due_date_textview">Due date</string>
    <string name="quantity_textview">Quantity</string>
    <string name="component_name_textview">Component Name(s)</string>
    <string name="order_products">Order products</string>
    <string name="units">Units</string>
    <string name="route_name">Route Name</string>
    <string name="server_unavailable">Server is unavailable</string>
    <string name="error_occurred">Unknown Error Occurred</string>
    <string name="component_id">Component ID</string>
    <string name="description">Description</string>
    <string name="lifespan">Lifespan</string>
    <string name="manufacture_date">Manufacture Date</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="route_id">Route ID</string>
    <string name="completion_time">Time to complete</string>
    <string name="processes_list">List of Processes</string>
    <string name="component_name_quantity">Component Name(s) and Quantity</string>
    <string name="false_string">false</string>
</resources>
