<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManufactureActivity">

    <Button
        android:id="@+id/factory_orders_button"
        android:layout_width="425dp"
        android:layout_height="66dp"
        android:text="@string/factory_orders"
        android:visibility="visible" />

    <Button
        android:id="@+id/component_list_button"
        android:layout_width="425dp"
        android:layout_height="66dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/factory_orders_button"
        android:text="@string/component_list"
        android:visibility="visible" />

    <Button
        android:id="@+id/routes_button"
        android:layout_width="425dp"
        android:layout_height="66dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/component_list_button"
        android:text="@string/routes"
        android:visibility="visible" />

    <Button
        android:id="@+id/workstations_list_button"
        android:layout_width="425dp"
        android:layout_height="66dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/routes_button"
        android:text="@string/workstations_list"
        android:visibility="visible" />

    <Button
        android:id="@+id/market_orders_button"
        android:layout_width="425dp"
        android:layout_height="66dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/workstations_list_button"
        android:text="@string/market_orders"
        android:visibility="visible" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/market_button"
            style="@android:style/Widget.Material.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/market_button"
            android:visibility="visible" />

        <Button
            android:id="@+id/manufacture_button"
            style="@android:style/Widget.Material.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/manufacture_button"
            android:visibility="visible" />
    </LinearLayout>
</RelativeLayout>