<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ComponentListActivity">

    <ListView
        android:id="@+id/component_list"
        android:layout_width="match_parent"
        android:layout_height="521dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="29dp" />

    <Button
        android:id="@+id/order_component_button"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/order_component"
        android:visibility="visible" />


    <TextView
        android:id="@+id/component_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/component_list"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="-29dp"
        android:text="@string/component_name_textview" />

    <TextView
        android:id="@+id/quantity_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/component_list"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="-29dp"
        android:layout_marginEnd="52dp"
        android:text="@string/quantity_textview" />

    <ProgressBar
        android:id="@+id/loadingCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/units_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/component_list"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="-29dp"
        android:layout_marginEnd="12dp"
        android:text="@string/units" />
</RelativeLayout>