<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpenMarketOrderActivity">

    <EditText
        android:id="@+id/component_id_field"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="43dp"
        android:ems="10"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

    <EditText
        android:id="@+id/client_name_field"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="128dp"
        android:ems="10"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <EditText
        android:id="@+id/order_date_field"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/order_date_textview"
        android:ems="10"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

    <TextView
        android:id="@+id/component_id_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/component_id_field"
        android:layout_alignStart="@+id/component_id_field"
        android:layout_marginBottom="-43dp"
        android:text="@string/order_id_textview" />

    <TextView
        android:id="@+id/product_name_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/client_name_field"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="-128dp"
        android:text="@string/client_name_textview" />

    <TextView
        android:id="@+id/order_date_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="191dp"
        android:text="@string/order_date_textview" />

    <TextView
        android:id="@+id/product_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="283dp"
        android:text="@string/product_name_quantity_textview" />

    <ListView
        android:id="@+id/product_names_listview"
        android:layout_width="317dp"
        android:layout_height="309dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/product_name_textview"
        android:layout_above="@+id/delete_market_order_button"/>

    <Button
        android:id="@+id/delete_market_order_button"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/delete_order"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/loadingCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>
</RelativeLayout>