<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpenRouteActivity">

    <TextView
        android:id="@+id/route_id_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/route_id" />

    <EditText
        android:id="@+id/route_id_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/route_id_textview"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/route_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/route_id_field"
        android:text="@string/route_name" />

    <EditText
        android:id="@+id/route_name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/route_name_textview"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/description_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/route_name_field"
        android:text="@string/description" />

    <EditText
        android:id="@+id/description_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/description_textview"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/completion_time_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/description_field"
        android:text="@string/completion_time" />

    <EditText
        android:id="@+id/completion_time_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/completion_time_textview"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/processes_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/completion_time_field"
        android:text="@string/processes_list" />

    <ListView
        android:id="@+id/process_listview"
        android:layout_width="match_parent"
        android:layout_height="159dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/processes_textview" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/process_listview"
        android:text="TextView" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView6"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText5"
        android:text="TextView" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView7" />

</RelativeLayout>